---------------------------------------------------------------------------------------------------
Version: 3.0.7
Date: ?
  Changes:
    - Fixed bitumen extractors invisible in 2.0. Resolves https://github.com/pyanodon/pybugreports/issues/714
---------------------------------------------------------------------------------------------------
Version: 3.0.6
Date: 2024-11-14
  Changes:
    - Buffed the rubber -> belt recipe. Rubber -> belt ratio is flipped from 2:1 to 1:2. Allowed productivity.
---------------------------------------------------------------------------------------------------
Version: 3.0.5
Date: 2024-11-9
  Changes:
    - Fixed bitumen seep graphics.
    - Ukrainian translation (by bootseller)
---------------------------------------------------------------------------------------------------
Version: 3.0.4
Date: 2024-11-7
  Changes:
    - Made most crafting machines flippable
    - Allow PyPH to load by itself.
---------------------------------------------------------------------------------------------------
Version: 3.0.3
Date: 2024-11-5
  Changes:
    - Fixed that bitumen seeps did not respect quality.
    - Fixed that the bitumen seep hidden assembler did not perserve the direction of the parent mining drill.
    - Bitumen seep hidden assemblers are now hidden in factoriopedia.
    - Fixed unfriendly usage of YAFC's script_enabled table. Resolves https://github.com/pyanodon/pybugreports/issues/672
---------------------------------------------------------------------------------------------------
Version: 3.0.2
Date: 2024-10-30
  Changes:
    - Fixed coalbed recipes requiring 500 degree pressurized water.
    - Fixed some fluids not having subgroups.
    - Fixed crash on startup with pyPH and pyHT.
    - A rose by any other quality would smell as sweet
---------------------------------------------------------------------------------------------------
Version: 3.0.1
Date: 2024-10-21
  Changes: