@@ -3,6 +3,10 @@ Version: 3.0.7
 Date: ?
   Changes:
     - Fixed bitumen extractors invisible in 2.0. Resolves https://github.com/pyanodon/pybugreports/issues/714
+    - Sulfur mines no longer requires gas canisters can consume fuel directly.
+    - Greatly increased the fuel consumption of the sulfur mine from 500kW to 30MW.
+    - Increased the number of module slots in the sulfur mine 1 -> 3.
+    - Added light flicker effects to the sulfur mine.
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.6
 Date: 2024-11-14
